--- a/projects/any/package.json
+++ b/projects/any/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^11.0.4",
-    "@angular/core": "^11.0.4"
+    "@angular/core": "^11.0.4",
+    "@angular/material": "^11.0.3",
+    "@angular/cdk": "^11.0.3",
+    "@angular/animations": "^11.0.4"
   },
   "dependencies": {
     "tslib": "^2.0.0"
